tests/float01_err.json.err
Parse error at line 001

001: {"val": 02e4}
             ^
Leading zero in float
